# markenium

./: .gitignore  CMakeLists.txt  TODO.md  flake.nix
src/: MyWidget.cpp  MyWidget.h  main.cpp
